# woody-book

./: Makefile  README.md  docker-compose.yml  render.yaml
client/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts
client/src/: App.tsx
client/src/api/: auth.ts  books.ts  client.ts  comments.ts  reviews.ts  types.ts  wishes.ts
client/src/components/: BookCarousel.tsx  BookListRow.tsx  BookRanking.tsx  CommentSection.tsx  Footer.tsx  Layout.tsx  PromoMarquee.tsx  ReviewSection.tsx  ScrollToTopButton.tsx  ScrollToTopOnNavigate.tsx  Spinner.tsx  StarRatingInput.tsx  WishButton.tsx
client/src/context/: AuthContext.tsx
client/src/pages/: BookDetail.tsx  BookListPage.tsx  Home.tsx  Login.tsx  NotFound.tsx  OAuthCallback.tsx  Register.tsx  Wishlist.tsx
client/src/routes/: AppRoutes.tsx
server/: .env.example  .gitignore  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_comment.py
server/app/: main.py  seed.py  seed_community.py  seed_naver.py
server/app/api/: auth.py  book.py  comment.py  review.py  router.py  wish.py
server/app/core/: config.py  db.py  deps.py  security.py
server/app/models/: __init__.py  book.py  comment.py  member.py  review.py  wish.py
server/app/schemas/: auth.py  book.py  comment.py  review.py  wish.py
server/app/services/: google_oauth.py  naver_books.py
